@@ -4425,15 +4425,22 @@ To exit the shell, close the window or press the keys: control+c control+c.
 
 \ejabberd{} includes a watchdog mechanism that may be useful to developers
 when troubleshooting a problem related to memory usage.
-If a process in the \ejabberd{} server consumes a lot of memory,
+If a process in the \ejabberd{} server consumes more memory than the configured threshold,
 a message is sent to the Jabber accounts defined with the option
 \term{watchdog\_admins}
 \ind{options!watchdog\_admins} in the \ejabberd{} configuration file.
-Note that the threshold to define what is too much memory usage 
-is only configurable editing the source code.
+
+The memory consumed is measured in \term{words}:
+a word on 32-bit architecture is 4 bytes,
+and a word on 64-bit architecture is 8 bytes.
+The threshold by default is 1000000 words.
+This value can be configured with the option \term{watchdog\_large\_heap},
+or in a conversation with the watchdog alert bot.
+
 Example configuration:
 \begin{verbatim}
 {watchdog_admins, ["admin2@localhost", "admin2@example.org"]}.
+{watchdog_large_heap, 30000000}.
 \end{verbatim}
 
 To remove watchdog admins, remove them in the option.
@@ -4441,7 +4448,6 @@ To remove all watchdog admins, set the option with an empty list:
 \begin{verbatim}
 {watchdog_admins, []}.
 \end{verbatim}
-
 
 \appendix{}
 
